# gb-rust

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/gb-cli/: Cargo.toml
crates/gb-cli/src/: main.rs
crates/gb-core/: Cargo.toml
crates/gb-core/src/: dma.rs  gb.rs  input.rs  interrupt.rs  lib.rs  serial.rs  timer.rs
crates/gb-core/src/apu/: apu.rs  mod.rs
crates/gb-core/src/bus/: bus.rs  mod.rs
crates/gb-core/src/cartridge/: header.rs  mbc.rs  mbc0.rs  mbc1.rs  (+4 more)
crates/gb-core/tests/: alu_flags.rs  apu.rs  cartridge_parse.rs  cartridge_persistence.rs  cgb_double_speed_timing.rs  cgb_memory.rs  cgb_mode.rs  cgb_ppu.rs  cpu_execution.rs  interrupts.rs  memory_map.rs  ppu_access_windows.rs  ppu_regs.rs  ppu_render_background.rs  serial_interrupts.rs  timer_dma.rs
crates/gb-sdl/: Cargo.toml
crates/gb-sdl/src/: audio.rs  main.rs
docs/: cgb-rom-manifest.md  project-structure.md  roadmap.md
docs/phases/: phase-01-baseline.md  phase-02-core-architecture-lock.md  phase-03-cartridge-memory-map.md  phase-04-cpu-execution-path.md  phase-05-timer-interrupts-dma.md  phase-06-ppu-mode-timing-ly-stat.md  phase-06-ppu-render-background.md  phase-10-core-blargg-timing-halt.md  phase-10-dmg-access-windows.md  phase-10-oam-corruption.md  phase-11-apu-dmg-baseline.md  phase-11-cgb-expansion-path.md  phase-12-cgb-mode-foundation.md  phase-13-cgb-memory-model.md  phase-14-cgb-ppu-features.md  phase-15-cgb-apu-timing.md  phase-16-ui-ux.md  phase-17-display-scaling.md  phase-template.md
(+17 files in other folders)
